# Autonomous

./: .gitignore  .gitmodules  README.md  config.ini  main.py  pyproject.toml  run_autonomous.sh  setup.py
Autonomous/: main.py
cfg/: cameralist.json  config.ini
examples/: README.md  ar.py  aruco_pose.py  cameralist_sim.json  opengl2.py  playground.py  renderer.py  simulation.py
examples/ARTrackerTest/: config.ini  newAr.py  testARpic.py  testARvid.py
libs/: ARTracker.py  Camera.py  Drive.py  GPSInterface.py  Lights.py  Navigation.py  ObjectTracker.py  Rover.py  Wheels.py  utilities.py
recordings/: README.md
src/: main.py
src/autonomous/: __init__.py
src/autonomous/RoverMap/: README.md  server.py
src/autonomous/libs/: ARTracker.py  Drive.py  Location.py
src/libs/: ARTracker.py
tests/: test_artracking.py  test_location.py
tools/: calculate_camera_mat.py  live_calibration.py
