[project]
name = "autonomous"
version = "0.1.0"
description = "Add a short description here"
dependencies = [
    "opencv-contrib-python==4.6.0.66",
    "flask>=2.3.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.workspace]
members = ["examples", "gps", "libs", "yolo", "RoverMap"]
